Configure SEO metadata dynamically

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>welcoming-ugessap</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <title>UGESSAP</title>
+    <meta name="description" content="Bienvenue sur UGESSAP." />
+    <meta property="og:title" content="UGESSAP - Accueil" />
+    <meta property="og:description" content="Bienvenue sur UGESSAP." />
+    <meta property="og:image" content="/ugessap-og-image.png" />
   </head>
-
   <body>
     <div id="root"></div>
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
