🎨 : improve UX UI styles

--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UGESSAP</title>
-    <meta name="description" content="Bienvenue sur UGESSAP." />
-    <meta property="og:title" content="UGESSAP - Accueil" />
-    <meta property="og:description" content="Bienvenue sur UGESSAP." />
-    <meta property="og:image" content="/ugessap-og-image.png" />
+
+    <!-- Balises SEO -->
+    <meta
+      name="description"
+      content="UGESSAP - Association dédiée à la santé et au bien-être à Montoir-de-Bretagne, proposant des services de proximité adaptés à vos besoins."
+    />
+    <meta
+      name="keywords"
+      content="UGESSAP, santé, bien-être, Montoir-de-Bretagne, centre de santé, services médicaux"
+    />
+    <meta name="author" content="UGESSAP" />
+
+    <!-- Open Graph pour les réseaux sociaux -->
+    <meta property="og:title" content="UGESSAP - Votre santé, notre priorité" />
+    <meta
+      property="og:description"
+      content="Association dédiée à la santé et au bien-être à Montoir-de-Bretagne, proposant des services de proximité adaptés à vos besoins."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://www.ugessap.fr" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="UGESSAP - Votre santé, notre priorité"
+    />
+    <meta
+      name="twitter:description"
+      content="Association dédiée à la santé et au bien-être à Montoir-de-Bretagne."
+    />
+    <meta name="twitter:image" content="/og-image.jpg" />
+
+    <title>UGESSAP - Votre santé, notre priorité</title>
   </head>
   <body>
     <div id="root"></div>
